SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  body.cc
  body-factory.cc
  polyhedron.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} KineoController)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} fcl)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
